Docs:Upto ImgSrc

--- a/index.html
+++ b/index.html
@@ -34,5 +34,56 @@
         <h2>@links</h2>
         <a href = "/">Primary Link</a>
         <a href = "/">Secondary Link</a>
+    <hr>
+    <h2>@list</h2>
+    <h3>Unordered List</h3>
+
+    <ul>
+        <li>ItemOne</li>
+        <li>ItemTwo</li>
+        <li>ItemThree</li>
+    </ul>
+<h3>Unordered Inline List</h3>
+    <ul>
+        <li>Inline Item One</li>
+        <li>Inline Item Two</li>
+        <li>Inline Item Three</li>
+    </ul>
+
+    <h3>reverse ordered list</h3>
+
+    <ol>
+        <li>Day</li>
+        <li>Night</li>
+        <li>Afternoon</li>
+    </ol>
+
+    <hr>
+    <h2>@nav</h2>
+        <nav>
+            <div>IamBrand</div>
+                <ul>
+                    <li>
+                        <a href="/">home</a>
+                    </li>
+                    <li>
+                        <a href="/">products</a>
+                    </li>
+                    <li>
+                        <a href = "/">about</a>
+                    </li>
+                </ul>
+        </nav>
+
+        <hr>
+        <h2>@header</h2>
+        <header>
+            <img src="https://media-exp2.licdn.com/dms/image/C4D03AQGA9pIKyhKWxw/profile-displayphoto-shrink_400_400/0/1637900571988?e=1663200000&v=beta&t=6G8YNxTMEsan5J-o6JhoSuaEwPomsiKhGIXCRA_t0VU"/>
+            <h1>heading inside hero</h1>
+
+        </header>
+
+
+
     </body>
 </html>
