--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
     <hr>
     <h2>@list</h2>
     <h3>Unordered List</h3>
-
-    <ul>
+    <p>This list will not have bullet</p>
+    <ul class="list-non-bullet">
         <li>ItemOne</li>
         <li>ItemTwo</li>
         <li>ItemThree</li>
     </ul>
     <h3>Unordered Inline List</h3>
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">Inline Item One</li>
+        <li class="list-item-inline">Inline Item Two</li>
+        <li class="list-item-inline">Inline Item Three</li>
     </ul>
 
     <h3>reverse ordered list</h3>
 
-    <ol>
+    <ol reversed>
         <li>Day</li>
         <li>Night</li>
         <li>Afternoon</li>
@@ -66,50 +66,50 @@
 
     <hr>
     <h2>@nav</h2>
-    <nav>
-        <div>IamBrand</div>
-        <ul>
-            <li>
-                <a href="/">home</a>
+    <nav class="navigation container">
+        <div class="nav-brand">IamBrand</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">home</a>
             </li>
-            <li>
-                <a href="/">products</a>
+            <li class="list-item-inline">
+                <a class="link" href="/">products</a>
             </li>
-            <li>
-                <a href="/">about</a>
+            <li class="list-item-inline">
+                <a class="link" href="/">about</a>
             </li>
         </ul>
     </nav>
 
     <hr>
     <h2>@header</h2>
-    <header>
-        <img src="images/heroImg.svg" />
+    <header class="hero">
+        <img class="hero-img" src="images/heroImg.svg" />
 
-    </header>
-    <hr>
-    <h2>@section</h2>
+        <h1 class="hero-heading">Adarsh Balika The <span class="heading-inverted"> web developer  </span></h1> </header> 
+            <hr>
+                <h2>@section</h2>
 
-    <section>
-        <h3>white section</h3>
-        <p>THis will have white background </p>
-    </section>
-    <section>
-        <h3>off white section</h3>
-        <p>THis will have gray background </p>
-    </section>
-    <hr>
-    <h2>@footer</h2>
-    <footer>
-        <div>
-            Some small heading inside footer
-            <ul>
-                <li>socialone</li>
-                <li>socialtwo</li>
-                <li>socialthree</li>
-            </ul>
-        </div>
-    </footer>
+                <section>
+                    <h3>white section</h3>
+                    <p>THis will have white background </p>
+                </section>
+                <section>
+                    <h3>off white section</h3>
+                    <p>THis will have gray background </p>
+                </section>
+                <hr>
+                <h2>@footer</h2>
+                <footer>
+                    <div>
+                        Some small heading inside footer
+                        <ul>
+                            <li>socialone</li>
+                            <li>socialtwo</li>
+                            <li>socialthree</li>
+                        </ul>
+                    </div>
+                </footer>
 
 </body>
 
